# K-Forcing

./: .gitignore  README.md  batch_inference_with_prefix.py  pyproject.toml
assets/: prefix_examples.jsonl  prefix_lm1b_examples.jsonl  prefix_owt_examples.jsonl
models/: __init__.py  autoregressive.py  pflm.py  transformer.py
scripts/: run_ar_lm1b.sh  run_ar_owt.sh  run_mdlm_owt.sh  run_pflm_lm1b.sh  run_pflm_owt.sh
utils/: __init__.py  checkpoint.py  download.py  tokenizer.py
