[project]
name = "k-forcing"
version = "0.1.0"
description = "K-Forcing: Joint Next-K-Token Decoding via Push-Forward Language Modeling"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.0",
    "einops>=0.8.0",
    "omegaconf>=2.3.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "flash-attn>=2.5.0",
    "tqdm",
    "loguru",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
