[project]
name = "k-forcing"
version = "0.1.0"
description = "K-Forcing: Joint Next-K-Token Decoding via Push-Forward Language Modeling"
requires-python = ">=3.9"
dependencies = [
    "torch==2.2.0",
    "einops==0.8.1",
    "omegaconf==2.3.0",
    "transformers==4.55.0",
    "huggingface-hub==0.34.4",
    "flash-attn==2.5.6",
    "tqdm==4.67.1",
    "loguru",
    "setuptools",
    "numpy==1.26.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "utils"]

[tool.uv]
find-links = ["wheels"]

[tool.uv.sources]
flash-attn = { path = "wheels/flash_attn-2.5.6+cu122torch2.2cxx11abiFALSE-cp39-cp39-linux_x86_64.whl" }
